--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
 .container {
     width: 100%;
     max-width: 800px;
-    padding-top: 1in;
     text-align: center;
     position: relative;
 }
@@ -30,7 +29,7 @@ body {
     display: flex;
     justify-content: center;
     position: fixed;
-    top: calc(1in + 1.5em); /* Adjust this to move the search bar higher */
+    top: 1cm; /* Adjust this to move the search bar closer to the top */
     width: 100%;
     z-index: 1;
     background: rgba(0, 0, 0, 0.5);
@@ -68,9 +67,9 @@ button:hover {
 }
 
 #results {
-    margin-top: calc(1in + 1.5em + 70px); /* Adjust to account for the search section height */
+    margin-top: calc(1cm + 70px); /* Adjust to account for the search section height */
     padding: 20px;
-    height: calc(100vh - (1in + 1.5em + 70px));
+    height: calc(100vh - (1cm + 70px) - 1cm); /* Leave 1cm at the bottom of the screen */
     overflow-y: scroll;
     background: rgba(0, 0, 0, 0.5);
 }
