--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body {
     display: flex;
     justify-content: center;
     position: fixed;
-    top: 1.5cm; /* Adjust this to move the search bar closer to the top */
+    top: 2.5cm; /* Adjust this to move the search bar closer to the top */
     width: 100%;
-    z-index: 1;
+    z-inde: 1;
     background: rgba(0, 0, 0, 0.5);
     padding: 10px 0;
 }
